syntax = "proto3";

package auth;

option go_package = "chat.auth.v1;authv1";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
  string email    = 1; // Email of the user to register
  string password = 2; // Password of the user to register
  string name     = 3; // Name of the user to register
}

message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user
}

message LoginRequest {
  string email      = 1; // Email of the user to login
  string password   = 2; // Password of the user to login
  string ip_address = 3; // Ip Address login user
}

message LoginResponse {
  string session_uuid = 1; // Session_uuid of the logged in user
}

message LogoutRequest {
  string session_uuid = 1; // Session_uuid of the logged in user
  string user_id      = 2; // User id for make logout
}

message LogoutResponse {
  string message = 1; // Response text about logout user
}
